--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,2 @@
-# Intervalo de tempo entre as execuções do script em segundos.
-# 300 segundos = 5 minutos.
-# 1800 segundos = 30 minutos.
-# 3600 segundos = 60 minutos.
-CHECK_INTERVAL_SECONDS=1800
+# Intervalo de tempo entre as execuções do script em minutos.
+CHECK_INTERVAL_MINUTES=60
